# finace-tracker-workbook-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml  review_report.json
docs/: prd-excell-budget-tracker.md  rascunho.md  release-checklist.md  release-notes-v1.0.0.md  tutorial-mapping.md
examples/: tutorial_spec.json
scripts/: run_coverage.py
src/budget_generator/: __init__.py  __main__.py  generator.py
src/budget_generator/charts/: __init__.py  doughnut.py
src/budget_generator/formatting/: conditional.py  styles.py  validation.py
src/budget_generator/formulas/: __init__.py  builder.py  calculations.py
src/budget_generator/sheets/: calculations.py  dashboard.py  dropdown.py  planning.py  settings.py  tracking.py
src/budget_generator/utils/: __init__.py  json_loader.py  named_ranges.py
tests/: test_cli.py  test_generator.py  test_integration.py  test_json_loader.py  test_named_ranges.py  test_output_validation.py
tests/fixtures/: empty_categories_spec.json  invalid_spec.json  malformed_workbook_spec.json  valid_spec.json
tests/test_formulas/: test_calculation_formulas.py
tests/test_sheets/: test_calculations.py  test_dashboard.py  test_dropdown.py  test_planning.py  test_settings.py  test_tracking.py
