[project]
name = "budget-excel-tracker"
version = "1.0.0"
description = "Generate Excel budget workbooks from JSON specifications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Budget Tracker Team" }
]
dependencies = [
  "openpyxl>=3.1.0",
  "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0"
]

[project.scripts]
budget-generator = "budget_generator.__main__:main"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
  "integration: integration-level tests that generate workbooks",
  "output: compares generated workbooks against golden artifacts"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
